--- a/styles/styles.css
+++ b/styles/styles.css
@@ -17,17 +17,13 @@ header {
 }
 
 #container {
-   /*grid-template-areas:
-  "number number number operator"
-  "number number number operator"
-  "number number number operator"
-  ". number . operator"
-  "backspace clear equals equals";*/
-    margin: 30px 0;
+    width: 400px;
+    border: #aeb7d5 3px solid;
+    margin: 30px auto;
 }
 
 #displayDiv {
-    font-family: 'Abel', sans-serif;
+    font-family: 'Work Sans', sans-serif;
     height: 80px;
     background-color: #fcfdfd;
     font-size: 3em;
@@ -51,6 +47,23 @@ header {
     grid-template-rows: repeat(5, 1fr);
     font-size: 2em;
     color: #A5A6A6;
+    box-sizing: border-box;
+}
+
+.numberbtn:hover {
+    background-color: #b5bbcf83;
+}
+
+#kDot:hover, #kBackspace:hover, #kC:hover {
+    background-color: #ccad8283;
+}
+
+#keysDiv:focus {
+    color: #478383;
+  }
+
+#keysDiv:hover {
+    cursor: pointer;
 }
 
 .operatorBtn {
@@ -58,6 +71,14 @@ header {
     background-color: #FCFDFD;
     font-family: 'Overpass', sans-serif;
     font-weight: 700;
+}
+
+.buttonClick {
+    box-shadow: inset 10px 10px 10px rgba(0,0,0,0.10);
+}
+
+.operatorBtn:hover {
+    background-color: #f0d458c2;
 }
 
 #keysDiv div {
@@ -73,4 +94,8 @@ header {
     color: #FCFDFD;
     font-family: 'Overpass', sans-serif;
     font-weight: 700;
+}
+
+#kEquals:hover {
+    background-color: #75734cde;
 }
